--- a/css/styles.css
+++ b/css/styles.css
@@ -6,11 +6,16 @@
 
 -FONT-WEIGHTS:
 DEFAULT:400
+medium:500
+semi-bold:600
+bold:700
 
 
 -LINE HEIGHTS:
 Defaukt:1
+1.05
 
+paragraph default:1.6
 
 
 -FONT SIZE SYSTEM (px)
@@ -28,6 +33,7 @@ Defaukt:1
 --- 05 SHADOWS
 
 ----06 BORDER-RADIUS
+default:9px
 
 ---07 WHITESPACE
 
@@ -50,10 +56,29 @@ body {
   font-weight: 400;
   color: #555;
 }
-.section-hero {
-  background-color: #fad7da;
-  padding: 9.6rem 0;
+/*========================*/
+/*GENERAL REUSABLE COMPONENT*/
+/*========================*/
+.container {
+  /*1140px*/
+  max-width: 120rem;
+  margin: 0 auto;
+  padding: 0 3.2rem;
 }
+
+.grid {
+  display: grid;
+  gap: 9.6rem;
+  grid-template-columns: repeat(2, 1fr);
+}
+
+.grid--2-cols {
+  grid-template-columns: repeat(2, 1fr);
+}
+.grid--3-cols {
+  grid-template-columns: repeat(3, 1fr);
+}
+
 .heading-primary {
   font-size: 5.2rem;
   font-weight: 700;
@@ -61,21 +86,6 @@ body {
   color: #333;
   letter-spacing: -0.5px;
   margin-bottom: 3.2rem;
-}
-.hero-description {
-  font-size: 2rem;
-  line-height: 1.6;
-
-  margin-bottom: 4.8rem;
-}
-
-.hero {
-  max-width: 130rem;
-  margin: 0 auto;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  align-items: center;
-  gap: 9.6rem;
 }
 .btn:link,
 .btn:visited {
@@ -111,13 +121,85 @@ body {
   /* trick to add border inside*/
   box-shadow: inset 0 0 0 3px #fff;
 }
-
-.hero .hero-img {
-  width: 100%;
-}
-
 .margin-right-sm {
   margin-right: 1.6rem;
+}
+/*========================*/
+/*HEADER*/
+/*========================*/
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #fad7da;
+
+  height: 9.6rem;
+  padding: 0 4.8rem;
+}
+.logo {
+  height: 5.5rem;
+}
+/*========================*/
+/*NAVIGATION*/
+/*========================*/
+.main-nav-list {
+  list-style: none;
+  display: flex;
+  align-items: center;
+  gap: 3.2rem;
+}
+.main-nav-link:link,
+.main-nav-link:visited {
+  display: inline-block;
+  text-decoration: none;
+  color: #333;
+  font-weight: 500;
+  font-size: 1.8rem;
+  transition: all 0.3s;
+}
+.main-nav-link:hover,
+.main-nav-link:active {
+  color: #cf333f;
+}
+.main-nav-link.nav-cta:link,
+.main-nav-link.nav-cta:visited {
+  padding: 1.2rem 2.4rem;
+  border-radius: 9px;
+  color: #fff;
+  background-color: #e63946;
+}
+
+.main-nav-link.nav-cta:hover,
+.main-nav-link.nav-cta:active {
+  background-color: #cf333f;
+}
+/*========================*/
+/*HERO SECTION*/
+/*========================*/
+.section-hero {
+  background-color: #fad7da;
+  padding: 4.8rem 0 9.6rem 0;
+}
+
+.hero-description {
+  font-size: 2rem;
+  line-height: 1.6;
+
+  margin-bottom: 4.8rem;
+}
+
+.hero {
+  max-width: 130rem;
+  margin: 0 auto;
+  padding: 0 3.2rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  align-items: center;
+  gap: 9.6rem;
+}
+
+.hero-img {
+  width: 100%;
 }
 
 .delivered-meals {
@@ -146,4 +228,13 @@ body {
 
 .delivered-text span {
   color: #cf333f;
+}
+
+/*========================*/
+/*HOW IT WORKS*/
+/*========================*/
+
+.section-how {
+  padding: 9.6rem 0;
+  background-color: aqua;
 }
