--- a/css/styles.css
+++ b/css/styles.css
@@ -1,139 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
-/*
----01 TYPOGRAPHY SYSTEM
 
-
-
--FONT-WEIGHTS:
-DEFAULT:400
-medium:500
-semi-bold:600
-bold:700
-
-
--LINE HEIGHTS:
-Defaukt:1
-1.05
-
-paragraph default:1.6
-
-
--FONT SIZE SYSTEM (px)
-10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98
-
----02 COLORS
--Primary:#E63946
--tints: #fad7da
--shades:#cf333f
--accent:
--greys:#555
-#333
-
-
---- 05 SHADOWS
-
-----06 BORDER-RADIUS
-default:9px
-
----07 WHITESPACE
-
---- 08 SPACING SYSTEM (px)
-2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128
-*/
-
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-}
-html {
-  font-size: 62.5%;
-}
-
-body {
-  font-family: 'Rubik', sans-serif;
-  line-height: 1;
-  font-weight: 400;
-  color: #555;
-}
-
-/*========================*/
-/*GENERAL REUSABLE COMPONENT*/
-/*========================*/
-.container {
-  /*1140px*/
-  max-width: 120rem;
-  margin: 0 auto;
-  padding: 0 3.2rem;
-}
-
-.grid {
-  display: grid;
-  gap: 9.6rem;
-  grid-template-columns: repeat(2, 1fr);
-}
-
-.grid--2-cols {
-  grid-template-columns: repeat(2, 1fr);
-}
-.grid--3-cols {
-  grid-template-columns: repeat(3, 1fr);
-}
-
-.heading-primary,
-.heading-secondary {
-  font-size: 5.2rem;
-  font-weight: 700;
-  margin-bottom: 3.2rem;
-}
-.heading-secondary {
-  font-size: 4.4rem;
-  line-height: 1.2;
-  color: #333;
-  color: #2e0b0e;
-}
-.heading-primary {
-  line-height: 1.05;
-  color: #333;
-  letter-spacing: -0.5px;
-}
-.btn:link,
-.btn:visited {
-  display: inline-block;
-  background-color: #e63946;
-  font-size: 2rem;
-  font-weight: 600;
-  padding: 1.6rem 3.2rem;
-  border-radius: 9px;
-  text-decoration: none;
-  transition: background-color 0.3s;
-}
-.btn--full:link,
-.btn--full:visited {
-  background-color: #e63946;
-  color: #fff;
-}
-
-.btn--full:hover,
-.btn--full:active {
-  background-color: #cf333f;
-}
-
-.btn--outline:link,
-.btn--outline:visited {
-  background-color: #fff;
-  color: #555;
-}
-.btn--outline:hover,
-.btn--outline:active {
-  background-color: #fad7da;
-  /* border: 3px solid #fff; */
-  /* trick to add border inside*/
-  box-shadow: inset 0 0 0 3px #fff;
-}
-.margin-right-sm {
-  margin-right: 1.6rem;
-}
 /*========================*/
 /*HEADER*/
 /*========================*/
@@ -248,6 +114,52 @@ body {
   padding: 9.6rem 0;
   /* background-color: #fad7da; */
 }
+
+.step-number {
+  font-size: 8.6rem;
+  font-weight: 600;
+  color: #ddd;
+  margin-bottom: 1.2rem;
+}
+.step-description {
+  font-size: 1.8rem;
+  line-height: 1.8;
+}
+.step-description {
+  font-size: 1.8rem;
+  line-height: 1.8;
+}
+.step-img-box {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+
+.step-img-box::before,
+.step-img-box::after {
+  content: '';
+  display: block;
+
+  border-radius: 50%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: -1;
+}
+
+.step-img-box::before {
+  width: 60%;
+  padding-bottom: 60%;
+  background-color: #fad7da;
+}
+.step-img-box::after {
+  width: 45%;
+  padding-bottom: 45%;
+  background-color: #e1c2c4;
+}
+
 .step-img {
-  max-width: 50%;
+  max-width: 35%;
 }
