--- a/css/styles.css
+++ b/css/styles.css
@@ -50,6 +50,34 @@
   background-color: #cf333f;
 }
 /*========================*/
+/*FEATURED SECTION*/
+/*========================*/
+
+.section-featured {
+  padding: 4.8rem 0 3.2rem 0;
+}
+.heading-featured-in {
+  font-size: 1.4rem;
+  text-transform: uppercase;
+  letter-spacing: 0.75px;
+  font-weight: 500;
+  text-align: center;
+  margin-bottom: 2.4rem;
+  color: #888;
+}
+
+.logos {
+  display: flex;
+  justify-content: space-around;
+}
+
+.logos img {
+  height: 3.2rem;
+  filter: brightness(0);
+  opacity: 50%;
+}
+
+/*========================*/
 /*HERO SECTION*/
 /*========================*/
 .section-hero {
@@ -60,7 +88,6 @@
 .hero-description {
   font-size: 2rem;
   line-height: 1.6;
-
   margin-bottom: 4.8rem;
 }
 
@@ -121,10 +148,7 @@
   color: #ddd;
   margin-bottom: 1.2rem;
 }
-.step-description {
-  font-size: 1.8rem;
-  line-height: 1.8;
-}
+
 .step-description {
   font-size: 1.8rem;
   line-height: 1.8;
