--- a/css/styles.css
+++ b/css/styles.css
@@ -187,3 +187,29 @@
 .step-img {
   max-width: 35%;
 }
+
+/*========================*/
+/*MEALS SECTION*/
+/*========================*/
+
+.section-meals {
+  padding: 9.6rem 0;
+}
+.meal-attributes {
+  list-style-type: none;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+.meal-attribute {
+  list-style: none;
+}
+.meal-title {
+  font-size: 2.4rem;
+  color: #333;
+  font-weight: 600;
+  margin-bottom: 3.2rem;
+}
+.meal-img {
+  width: 100%;
+}
