--- a/css/general.css
+++ b/css/general.css
@@ -37,6 +37,7 @@ paragraph default:1.6
 
 ----06 BORDER-RADIUS
 default:9px
+11
 
 ---07 WHITESPACE
 
@@ -132,7 +133,8 @@ body {
   padding: 1.6rem 3.2rem;
   border-radius: 9px;
   text-decoration: none;
-  transition: background-color 0.3s;
+  /* transition: background-color 0.3s; */
+  transition: all 0.3s;
 }
 .btn--full:link,
 .btn--full:visited {
@@ -157,8 +159,29 @@ body {
   /* trick to add border inside*/
   box-shadow: inset 0 0 0 3px #fff;
 }
+.link:link,
+.link:visited {
+  display: inline-block;
+  color: #e63946;
+  text-decoration: none;
+  border-bottom: 1px solid currentColor;
+  padding-bottom: 2px;
+  transition: all 0.3s;
+}
+.link:hover,
+.link:active {
+  color: #cf333f;
+  border-bottom: 1px solid transparent;
+}
+/* Helper classes */
 .margin-right-sm {
   margin-right: 1.6rem;
+}
+.margin-bottom-md {
+  margin-bottom: 4.8rem !important;
+}
+.center-text {
+  text-align: center;
 }
 
 strong {
