--- a/css/styles.css
+++ b/css/styles.css
@@ -401,6 +401,7 @@
   font-size: 1.6rem;
   line-height: 1.6;
   text-align: center;
+  margin-bottom: 8rem;
 }
 .feature-icon {
   color: #e63946;
@@ -420,4 +421,81 @@
 .feature-text {
   font-size: 1.8rem;
   line-height: 1.8;
+}
+/*========================*/
+/*CTA SECTION*/
+/*========================*/
+
+.section-cta {
+  padding: 4.8rem 0 12.8rem 0;
+}
+.cta {
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.15);
+  border-radius: 11px;
+
+  /* background-color: #e63946; */
+  overflow: hidden;
+  background-image: linear-gradient(to right bottom, #e63946, #cf333f);
+  overflow: hidden;
+}
+.cta-text-box {
+  padding: 4.8rem 6.4rem 6.4rem 6.4rem;
+  color: #fff;
+}
+.cta .heading-secondary {
+  color: inherit;
+  margin-bottom: 3.2rem;
+}
+
+.cta-text {
+  font-size: 1.8rem;
+  line-height: 1.8;
+  margin-bottom: 4.8rem;
+}
+
+.cta-image-box {
+  background-image: linear-gradient(
+      to right bottom,
+      rgba(230, 57, 71, 0.274),
+      rgba(207, 51, 64, 0.219)
+    ),
+    url('../img/eating.png');
+  background-size: cover;
+  background-position: center;
+}
+
+.cta-form {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  column-gap: 3.2rem;
+  row-gap: 2.4rem;
+}
+
+.cta-form label {
+  display: block;
+  font-size: 1.6rem;
+  font-weight: 500;
+  margin-bottom: 1.2rem;
+}
+.cta-form input,
+.cta-form select {
+  width: 100%;
+  padding: 1.2rem;
+  font-size: 1.8rem;
+  font-family: inherit;
+
+  border: none;
+  background-color: #fff;
+  border-radius: 9px;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+}
+.cta-form input::placeholder {
+  color: #aaa;
+}
+
+.cta *:focus {
+  outline: none;
+  box-shadow: 0 0 0 0.8rem rgba(253, 209, 209, 0.5);
 }
