--- a/css/styles.css
+++ b/css/styles.css
@@ -505,10 +505,44 @@
 /*========================*/
 
 .footer {
-  padding: 9.6rem 0;
+  padding: 9.8rem 0;
   border-top: 1px solid #eee;
 }
-/* .grid--footer {
+.grid--footer {
+  grid-template-columns: 1.5fr 1.5fr 1fr 1fr 1fr;
+  margin-bottom: 0 !important;
+}
+.footer-heading {
+  font-size: 1.8rem;
+  font-weight: 500;
+  margin-bottom: 4rem;
+}
+.contacts {
+  font-style: normal;
+  font-size: 1.6rem;
+  line-height: 1.6;
+}
+.address {
+  margin-bottom: 2.4rem;
+}
+.footer-nav {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 2.4rem;
+}
+.footer-link:link,
+.footer-link:visited {
+  text-decoration: none;
+  font-size: 1.6rem;
+  color: #767676;
+  transition: all 0.3s;
+}
+.footer-link:hover,
+.footer-link:active {
+  color: #555;
+}
+.grid--footer {
   grid-template-columns: 1.5fr 1.5fr 1fr 1fr 1fr;
 }
 .logo-col {
@@ -533,4 +567,4 @@
   line-height: 1.6;
   color: #767676;
   margin-top: auto;
-} */
+}
