adding media queries

--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,7 @@
 
   height: 9.6rem;
   padding: 0 4.8rem;
+  position: relative;
 }
 .logo {
   height: 5.5rem;
@@ -22,7 +23,7 @@
   list-style: none;
   display: flex;
   align-items: center;
-  gap: 3.2rem;
+  gap: 4.8rem;
 }
 .main-nav-link:link,
 .main-nav-link:visited {
@@ -76,7 +77,21 @@
   filter: brightness(0);
   opacity: 50%;
 }
-
+/*   MOBILE NAV */
+.btn-mobile-nav {
+  border: none;
+  background: none;
+  cursor: pointer;
+  display: none;
+}
+.icon-mobile-nav {
+  height: 4.8rem;
+  width: 4.8rem;
+  color: #333;
+}
+.icon-mobile-nav[name='close-outline'] {
+  display: none;
+}
 /*========================*/
 /*HERO SECTION*/
 /*========================*/
@@ -264,25 +279,6 @@
 .all-recipes {
   text-align: center;
   font-size: 1.8rem;
-}
-.list {
-  list-style: none;
-  display: flex;
-  flex-direction: column;
-  gap: 1.6rem;
-}
-.list-item {
-  font-size: 1.8rem;
-  display: flex;
-  align-items: center;
-  gap: 1.6rem;
-  line-height: 1.2;
-}
-
-.list-icon {
-  width: 3rem;
-  height: 3rem;
-  color: #cf333f;
 }
 
 .section-testimonials {
