--- a/css/general.css
+++ b/css/general.css
@@ -51,7 +51,10 @@ default:9px
   box-sizing: border-box;
 }
 html {
+  /* font-size: 10px; */
+
   font-size: 62.5%;
+  overflow-x: hidden;
 }
 
 body {
@@ -59,6 +62,7 @@ body {
   line-height: 1;
   font-weight: 400;
   color: #555;
+  overflow-x: hidden;
 }
 
 /*========================*/
@@ -215,6 +219,25 @@ body {
 
 strong {
   font-weight: 500;
+}
+.list {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 1.6rem;
+}
+.list-item {
+  font-size: 1.8rem;
+  display: flex;
+  align-items: center;
+  gap: 1.6rem;
+  line-height: 1.2;
+}
+
+.list-icon {
+  width: 3rem;
+  height: 3rem;
+  color: #cf333f;
 }
 
 *:focus {
